--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -7,81 +7,86 @@
       - name: '8.7'
         version_prefix: '80700'
         dist_prefix: 'el8.7.0'
+  data:
+    mock:
+      macros:
+        "%pe_signing_cert": "'f4217b7b99a69128'"
+        "%pe_signing_token": "'AlmaLinux OS Foundation'"
   repositories:
     - name: almalinux-8-beta
       arch: i686
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-i686-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-i686-dr/
       production: false
       debug: false
       priority: 5
     - name: almalinux-8-beta
       arch: x86_64
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-x86_64-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-x86_64-dr/
       production: false
       debug: false
       priority: 5
     - name: almalinux-8-beta
       arch: aarch64
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-aarch64-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-aarch64-dr/
       production: false
       debug: false
       priority: 5
     - name: almalinux-8-beta
       arch: ppc64le
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-ppc64le-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-ppc64le-dr/
       production: false
       debug: false
       priority: 5
     - name: almalinux-8-beta
       arch: s390x
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-s390x-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-s390x-dr/
       production: false
       debug: false
       priority: 5
     - name: almalinux-8-beta-debuginfo
       arch: i686
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-i686-debug-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-i686-debug-dr/
       production: false
       debug: true
       priority: 5
     - name: almalinux-8-beta-debuginfo
       arch: x86_64
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-x86_64-debug-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-x86_64-debug-dr/
       production: false
       debug: true
       priority: 5
     - name: almalinux-8-beta-debuginfo
       arch: aarch64
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-aarch64-debug-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-aarch64-debug-dr/
       production: false
       debug: true
       priority: 5
     - name: almalinux-8-beta-debuginfo
       arch: ppc64le
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-ppc64le-debug-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-ppc64le-debug-dr/
       production: false
       debug: true
       priority: 5
     - name: almalinux-8-beta-debuginfo
       arch: s390x
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-s390x-debug-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-s390x-debug-dr/
       production: false
       debug: true
       priority: 5
     - name: almalinux-8-beta
       arch: src
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-src-dr/
+      url: https://build.almalinux.org/pulp/content/builds/almalinux8-beta-AlmaLinux-8-src-dr/
       production: false
       debug: false
       priority: 5
@@ -95,81 +100,86 @@
       - name: '9.1'
         version_prefix: '90100'
         dist_prefix: 'el9.1.0'
+  data:
+    mock:
+      macros:
+        "%pe_signing_cert": "'f4217b7b99a69128'"
+        "%pe_signing_token": "'AlmaLinux OS Foundation'"
   repositories:
     - name: almalinux-9-beta
       arch: i686
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-i686-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-i686-dr/
       production: false
       debug: false
       priority: 5
     - name: almalinux-9-beta
       arch: x86_64
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-x86_64-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-x86_64-dr/
       production: false
       debug: false
       priority: 5
     - name: almalinux-9-beta
       arch: aarch64
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-aarch64-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-aarch64-dr/
       production: false
       debug: false
       priority: 5
     - name: almalinux-9-beta
       arch: ppc64le
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-ppc64le-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-ppc64le-dr/
       production: false
       debug: false
       priority: 5
     - name: almalinux-9-beta
       arch: s390x
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-s390x-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-s390x-dr/
       production: false
       debug: false
       priority: 5
     - name: almalinux-9-beta-debuginfo
       arch: i686
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-i686-debug-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-i686-debug-dr/
       production: false
       debug: true
       priority: 5
     - name: almalinux-9-beta-debuginfo
       arch: x86_64
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-x86_64-debug-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-x86_64-debug-dr/
       production: false
       debug: true
       priority: 5
     - name: almalinux-9-beta-debuginfo
       arch: aarch64
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-aarch64-debug-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-aarch64-debug-dr/
       production: false
       debug: true
       priority: 5
     - name: almalinux-9-beta-debuginfo
       arch: ppc64le
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-ppc64le-debug-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-ppc64le-debug-dr/
       production: false
       debug: true
       priority: 5
     - name: almalinux-9-beta-debuginfo
       arch: s390x
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-s390x-debug-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-s390x-debug-dr/
       production: false
       debug: true
       priority: 5
     - name: almalinux-9-beta
       arch: src
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-src-dr/
+      url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-9-beta-AlmaLinux-9-src-dr/
       production: false
       debug: false
       priority: 5
@@ -179,56 +189,56 @@
     - name: epel
       arch: x86_64
       type: rpm
-      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/x86_64/
+      url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/x86_64/
       production: false
       debug: false
       priority: 5
     - name: epel-modular
       arch: x86_64
       type: rpm
-      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/x86_64/
+      url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/x86_64/
       production: false
       debug: false
       priority: 5
     - name: epel
       arch: aarch64
       type: rpm
-      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/aarch64/
+      url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/aarch64/
       production: false
       debug: false
       priority: 5
     - name: epel-modular
       arch: aarch64
       type: rpm
-      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/aarch64/
+      url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/aarch64/
       production: false
       debug: false
       priority: 5
     - name: epel
       arch: ppc64le
       type: rpm
-      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/ppc64le/
+      url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/ppc64le/
       production: false
       debug: false
       priority: 5
     - name: epel-modular
       arch: ppc64le
       type: rpm
-      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/ppc64le/
+      url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/ppc64le/
       production: false
       debug: false
       priority: 5
     - name: epel
       arch: s390x
       type: rpm
-      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/s390x/
+      url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/s390x/
       production: false
       debug: false
       priority: 5
     - name: epel-modular
       arch: s390x
       type: rpm
-      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/s390x/
+      url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/s390x/
       production: false
       debug: false
       priority: 5
